# 202520689978

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  adder.h  adder_8h.html  adder_8h_source.html  calc.cpp  doxygen-deploy.yml  graph_legend.html  hi_and_date.cmd  index.html  navtreedata.js
.github/: index.html
.github/workflows/: doxygen-deploy.yml
CUsersezzpeotheruser/: README.md
Worksheet5/: CMakeLists.txt  Doxyfile  README.md  adder.cpp  adder.h  adder_8h.html  calc.cpp
Worksheet5/.github/workflows/: doxygen-deploy.yml
Worksheet5/html/: adder_8h_source.html
Worksheet5/latex/: adder_8h_source.tex  refman.tex
Worksheet6/: CMakeLists.txt  Icons.qrc.autosave  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave
Worksheet7/Exercise3/Qt/: CMakeLists.txt  ModelPart.cpp  ModelPart.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  optiondialog.ui
html/: doxygen_crawl.html  graph_legend.html  md__r_e_a_d_m_e.html
latex/: md__r_e_a_d_m_e.tex
worksheet6/: CMakeLists.txt  ModelPart.cpp  ModelPart.h  optiondialog.cpp  optiondialog.h
